--- a/vm/Carrot.vm
+++ b/vm/Carrot.vm
@@ -1,4 +1,4 @@
-function Fugu.new 0
+function Carrot.new 0
     push constant 4
     call Memory.alloc 1
     pop pointer 0
@@ -12,11 +12,11 @@ function Fugu.new 0
     pop this 3
     push pointer 0
     push constant 52
-    call Fugu.draw 2
+    call Carrot.draw 2
     pop temp 0
     push pointer 0
     return
-function Fugu.dispose 0
+function Carrot.dispose 0
     push argument 0
     pop pointer 0
     push pointer 0
@@ -24,7 +24,7 @@ function Fugu.dispose 0
     pop temp 0
     push constant 0
     return
-function Fugu.draw 1
+function Carrot.draw 1
     push argument 0
     pop pointer 0
     push constant 16384
@@ -34,99 +34,97 @@ function Fugu.draw 1
     push local 0
     push constant 0
     add
-    push constant 8448
+    push constant 2336
     call Memory.poke 2
     pop temp 0
     push local 0
     push constant 32
     add
-    push constant 26560
+    push constant 3424
     call Memory.poke 2
     pop temp 0
     push local 0
     push constant 64
     add
-    push constant 14432
+    push constant 1984
     call Memory.poke 2
     pop temp 0
     push local 0
     push constant 96
     add
-    push constant 12344
+    push constant 896
     call Memory.poke 2
     pop temp 0
     push local 0
     push constant 128
     add
-    push constant 7160
-    neg
+    push constant 1984
     call Memory.poke 2
     pop temp 0
     push local 0
     push constant 160
     add
-    push constant 16339
-    neg
+    push constant 2080
     call Memory.poke 2
     pop temp 0
     push local 0
     push constant 192
     add
-    push constant 16903
+    push constant 5648
     call Memory.poke 2
     pop temp 0
     push local 0
     push constant 224
     add
-    push constant 17294
+    push constant 4208
     call Memory.poke 2
     pop temp 0
     push local 0
     push constant 256
     add
-    push constant 24604
+    push constant 5904
     call Memory.poke 2
     pop temp 0
     push local 0
     push constant 288
     add
-    push constant 8208
+    push constant 2080
     call Memory.poke 2
     pop temp 0
     push local 0
     push constant 320
     add
-    push constant 14392
+    push constant 2272
     call Memory.poke 2
     pop temp 0
     push local 0
     push constant 352
     add
-    push constant 3168
+    push constant 1600
     call Memory.poke 2
     pop temp 0
     push local 0
     push constant 384
     add
-    push constant 1984
+    push constant 1088
     call Memory.poke 2
     pop temp 0
     push local 0
     push constant 416
     add
-    push constant 0
+    push constant 640
     call Memory.poke 2
     pop temp 0
     push local 0
     push constant 448
     add
-    push constant 0
+    push constant 896
     call Memory.poke 2
     pop temp 0
     push local 0
     push constant 480
     add
-    push constant 0
+    push constant 256
     call Memory.poke 2
     pop temp 0
     push constant 0
