--- a/vm/Fugu.vm
+++ b/vm/Fugu.vm
@@ -11,8 +11,15 @@ function Fugu.new 0
     push constant 10
     pop this 3
     push pointer 0
-    push constant 52
+    push constant 51
     call Fugu.draw 2
+    pop temp 0
+    push constant 5000
+    call Sys.wait 1
+    pop temp 0
+    push pointer 0
+    push constant 51
+    call Fugu.erase 2
     pop temp 0
     push pointer 0
     return
@@ -34,97 +41,259 @@ function Fugu.draw 1
     push local 0
     push constant 0
     add
-    push constant 0
+    push constant 8448
     call Memory.poke 2
     pop temp 0
     push local 0
     push constant 32
     add
-    push constant 0
+    push constant 26560
     call Memory.poke 2
     pop temp 0
     push local 0
     push constant 64
     add
-    push constant 0
+    push constant 14432
     call Memory.poke 2
     pop temp 0
     push local 0
     push constant 96
     add
-    push constant 1984
+    push constant 12344
     call Memory.poke 2
     pop temp 0
     push local 0
     push constant 128
     add
-    push constant 608
+    push constant 7160
+    neg
     call Memory.poke 2
     pop temp 0
     push local 0
     push constant 160
     add
-    push constant 2040
+    push constant 16339
+    neg
     call Memory.poke 2
     pop temp 0
     push local 0
     push constant 192
     add
-    push constant 2060
+    push constant 16903
     call Memory.poke 2
     pop temp 0
     push local 0
     push constant 224
     add
-    push constant 7190
+    push constant 17294
     call Memory.poke 2
     pop temp 0
     push local 0
     push constant 256
     add
-    push constant 6150
+    push constant 24604
     call Memory.poke 2
     pop temp 0
     push local 0
     push constant 288
     add
-    push constant 2246
+    push constant 8208
     call Memory.poke 2
     pop temp 0
     push local 0
     push constant 320
     add
-    push constant 1316
+    push constant 14392
     call Memory.poke 2
     pop temp 0
     push local 0
     push constant 352
     add
-    push constant 1404
+    push constant 3168
     call Memory.poke 2
     pop temp 0
     push local 0
     push constant 384
     add
-    push constant 896
+    push constant 1984
+    call Memory.poke 2
+    pop temp 0
+    push constant 0
+    return
+function Fugu.erase 2
+    push argument 0
+    pop pointer 0
+    push constant 16384
+    push argument 1
+    add
+    pop local 0
+    push local 0
+    push constant 0
+    add
+    call Memory.peek 1
+    pop local 1
+    push local 0
+    push constant 0
+    add
+    push local 1
+    push constant 8448
+    sub
     call Memory.poke 2
     pop temp 0
     push local 0
-    push constant 416
+    push constant 32
     add
-    push constant 0
+    call Memory.peek 1
+    pop local 1
+    push local 0
+    push constant 32
+    add
+    push local 1
+    push constant 26560
+    sub
     call Memory.poke 2
     pop temp 0
     push local 0
-    push constant 448
+    push constant 64
     add
-    push constant 0
+    call Memory.peek 1
+    pop local 1
+    push local 0
+    push constant 64
+    add
+    push local 1
+    push constant 14432
+    sub
     call Memory.poke 2
     pop temp 0
     push local 0
-    push constant 480
+    push constant 96
     add
-    push constant 0
+    call Memory.peek 1
+    pop local 1
+    push local 0
+    push constant 96
+    add
+    push local 1
+    push constant 12344
+    sub
+    call Memory.poke 2
+    pop temp 0
+    push local 0
+    push constant 128
+    add
+    call Memory.peek 1
+    pop local 1
+    push local 0
+    push constant 128
+    add
+    push local 1
+    push constant 7160
+    add
+    call Memory.poke 2
+    pop temp 0
+    push local 0
+    push constant 160
+    add
+    call Memory.peek 1
+    pop local 1
+    push local 0
+    push constant 160
+    add
+    push local 1
+    push constant 16339
+    add
+    call Memory.poke 2
+    pop temp 0
+    push local 0
+    push constant 192
+    add
+    call Memory.peek 1
+    pop local 1
+    push local 0
+    push constant 192
+    add
+    push local 1
+    push constant 16903
+    sub
+    call Memory.poke 2
+    pop temp 0
+    push local 0
+    push constant 224
+    add
+    call Memory.peek 1
+    pop local 1
+    push local 0
+    push constant 224
+    add
+    push local 1
+    push constant 17294
+    sub
+    call Memory.poke 2
+    pop temp 0
+    push local 0
+    push constant 256
+    add
+    call Memory.peek 1
+    pop local 1
+    push local 0
+    push constant 256
+    add
+    push local 1
+    push constant 24604
+    sub
+    call Memory.poke 2
+    pop temp 0
+    push local 0
+    push constant 288
+    add
+    call Memory.peek 1
+    pop local 1
+    push local 0
+    push constant 288
+    add
+    push local 1
+    push constant 8208
+    sub
+    call Memory.poke 2
+    pop temp 0
+    push local 0
+    push constant 320
+    add
+    call Memory.peek 1
+    pop local 1
+    push local 0
+    push constant 320
+    add
+    push local 1
+    push constant 14392
+    sub
+    call Memory.poke 2
+    pop temp 0
+    push local 0
+    push constant 352
+    add
+    call Memory.peek 1
+    pop local 1
+    push local 0
+    push constant 352
+    add
+    push local 1
+    push constant 3168
+    sub
+    call Memory.poke 2
+    pop temp 0
+    push local 0
+    push constant 384
+    add
+    call Memory.peek 1
+    pop local 1
+    push local 0
+    push constant 384
+    add
+    push local 1
+    push constant 1984
+    sub
     call Memory.poke 2
     pop temp 0
     push constant 0
