--- a/vm/Fugu.vm
+++ b/vm/Fugu.vm
@@ -11,15 +11,8 @@ function Fugu.new 0
     push constant 10
     pop this 3
     push pointer 0
-    push constant 51
+    push constant 0
     call Fugu.draw 2
-    pop temp 0
-    push constant 5000
-    call Sys.wait 1
-    pop temp 0
-    push pointer 0
-    push constant 51
-    call Fugu.erase 2
     pop temp 0
     push pointer 0
     return
@@ -295,6 +288,114 @@ function Fugu.erase 2
     push constant 1984
     sub
     call Memory.poke 2
+    pop temp 0
+    push constant 0
+    return
+function Fugu.moveUp 1
+    push argument 0
+    pop pointer 0
+    push pointer 0
+    push this 1
+    push constant 32
+    call Math.multiply 2
+    push this 0
+    add
+    call Fugu.erase 2
+    pop temp 0
+    push this 1
+    push constant 2
+    sub
+    pop this 1
+    push this 1
+    push constant 32
+    call Math.multiply 2
+    push this 0
+    add
+    pop local 0
+    push pointer 0
+    push local 0
+    call Fugu.draw 2
+    pop temp 0
+    push constant 0
+    return
+function Fugu.moveDown 1
+    push argument 0
+    pop pointer 0
+    push pointer 0
+    push this 1
+    push constant 32
+    call Math.multiply 2
+    push this 0
+    add
+    call Fugu.erase 2
+    pop temp 0
+    push this 1
+    push constant 2
+    add
+    pop this 1
+    push this 1
+    push constant 32
+    call Math.multiply 2
+    push this 0
+    add
+    pop local 0
+    push pointer 0
+    push local 0
+    call Fugu.draw 2
+    pop temp 0
+    push constant 0
+    return
+function Fugu.moveLeft 1
+    push argument 0
+    pop pointer 0
+    push pointer 0
+    push this 1
+    push constant 32
+    call Math.multiply 2
+    push this 0
+    add
+    call Fugu.erase 2
+    pop temp 0
+    push this 0
+    push constant 1
+    sub
+    pop this 0
+    push this 1
+    push constant 32
+    call Math.multiply 2
+    push this 0
+    add
+    pop local 0
+    push pointer 0
+    push local 0
+    call Fugu.draw 2
+    pop temp 0
+    push constant 0
+    return
+function Fugu.moveRight 1
+    push argument 0
+    pop pointer 0
+    push pointer 0
+    push this 1
+    push constant 32
+    call Math.multiply 2
+    push this 0
+    add
+    call Fugu.erase 2
+    pop temp 0
+    push this 0
+    push constant 1
+    add
+    pop this 0
+    push this 1
+    push constant 32
+    call Math.multiply 2
+    push this 0
+    add
+    pop local 0
+    push pointer 0
+    push local 0
+    call Fugu.draw 2
     pop temp 0
     push constant 0
     return
