--- a/vm/FuguGame.vm
+++ b/vm/FuguGame.vm
@@ -86,41 +86,78 @@ label FuguGame_7
 label FuguGame_6
     push constant 0
     return
-function FuguGame.run 5
+function FuguGame.IsCollided 6
+    push argument 0
+    pop pointer 0
+    push this 2
+    call Carrot.getX 1
+    pop local 0
+    push this 2
+    call Carrot.getY 1
+    pop local 1
+    push this 0
+    call Fugu.getX 1
+    pop local 3
+    push this 0
+    call Fugu.getY 1
+    pop local 4
+    push this 2
+    call Carrot.getHeight 1
+    pop local 2
+    push this 0
+    call Fugu.getHeight 1
+    pop local 5
+    push local 0
+    push local 3
+    eq
+    push local 1
+    push constant 1
+    sub
+    push local 4
+    push local 5
+    add
+    push constant 1
+    sub
+    lt
+    push local 4
+    push local 5
+    add
+    push constant 1
+    sub
+    push local 1
+    push local 2
+    add
+    lt
+    push local 1
+    push local 2
+    add
+    push local 4
+    gt
+    push local 4
+    push local 1
+    push constant 1
+    sub
+    gt
+    and
+    or
+    and
+    and
+    return
+function FuguGame.run 7
     push argument 0
     pop pointer 0
     push constant 0
     pop local 1
-    push this 2
-    push pointer 0
-    push this 2
-    call Carrot.getY 1
-    push this 2
-    call Carrot.getX 1
-    call FuguGame.calc_location 3
-    call Carrot.draw 2
-    pop temp 0
-    push this 2
-    push pointer 0
-    push constant 100
-    push constant 20
-    call FuguGame.calc_location 3
-    call Carrot.draw 2
-    pop temp 0
-    push this 2
-    push pointer 0
-    push constant 152
-    push constant 1
-    call FuguGame.calc_location 3
-    call Carrot.draw 2
-    pop temp 0
     push constant 0
-    pop local 2
-    push constant 3
     pop local 3
+    push this 2
+    call Carrot.draw 1
+    pop temp 0
+    push constant 3
+    pop local 5
     push constant 1
     neg
-    pop local 4
+    pop local 6
 label FuguGame_8
     push local 1
     not
@@ -132,8 +169,14 @@ label FuguGame_10
     push local 0
     push constant 0
     eq
-    push local 0
-    push constant 81
+    push local 1
+    push constant 1
+    neg
+    eq
+    or
+    push local 3
+    push constant 1
+    neg
     eq
     or
     not
@@ -177,55 +220,107 @@ label FuguGame_12
     call FuguGame.moveFugu 1
     pop temp 0
     push this 2
-    push pointer 0
-    push constant 100
-    push local 2
-    add
-    push constant 20
-    call FuguGame.calc_location 3
-    call Carrot.erase 2
+    call Carrot.erase 1
     pop temp 0
     push this 2
-    push pointer 0
-    push constant 100
-    push local 3
+    push this 2
+    call Carrot.getY 1
+    push local 5
     add
-    push constant 20
-    call FuguGame.calc_location 3
-    call Carrot.draw 2
+    push this 2
+    call Carrot.getX 1
+    call Carrot.set_YX 3
     pop temp 0
-    push constant 5
-    call Sys.wait 1
+    push this 2
+    call Carrot.draw 1
     pop temp 0
-    push local 4
+    push pointer 0
+    call FuguGame.IsCollided 1
+    pop local 3
+    push local 3
     not
     if-goto FuguGame_17
-    push constant 3
-    pop local 2
-    push constant 0
-    pop local 3
+    push this 0
+    call Fugu.erase 1
+    pop temp 0
     goto FuguGame_16
 label FuguGame_17
 label FuguGame_16
-    push local 4
-    not
-    not
-    if-goto FuguGame_19
-    push constant 0
-    pop local 2
-    push constant 3
-    pop local 3
-    goto FuguGame_18
-label FuguGame_19
-label FuguGame_18
-    push local 4
-    not
-    pop local 4
+    push constant 5
+    call Sys.wait 1
+    pop temp 0
+    push local 5
+    neg
+    pop local 5
     goto FuguGame_14
 label FuguGame_15
 label FuguGame_14
     goto FuguGame_10
 label FuguGame_11
+    push local 3
+    not
+    if-goto FuguGame_19
+    push constant 14
+    call String.new 1
+    push constant 89
+    call String.appendChar 2
+    push constant 111
+    call String.appendChar 2
+    push constant 117
+    call String.appendChar 2
+    push constant 32
+    call String.appendChar 2
+    push constant 108
+    call String.appendChar 2
+    push constant 111
+    call String.appendChar 2
+    push constant 115
+    call String.appendChar 2
+    push constant 101
+    call String.appendChar 2
+    push constant 114
+    call String.appendChar 2
+    push constant 32
+    call String.appendChar 2
+    push constant 58
+    call String.appendChar 2
+    push constant 41
+    call String.appendChar 2
+    push constant 41
+    call String.appendChar 2
+    push constant 41
+    call String.appendChar 2
+    pop local 4
+    push constant 4
+    push constant 4
+    call Output.moveCursor 2
+    pop temp 0
+    push local 4
+    call Output.printString 1
+    pop temp 0
+    push local 4
+    call String.dispose 1
+    pop temp 0
+    call Keyboard.keyPressed 0
+    pop local 0
+    push local 0
+    push constant 53
+    eq
+    not
+    if-goto FuguGame_21
+    push constant 0
+    pop local 3
+    push this 0
+    push constant 0
+    push constant 0
+    call Fugu.set_YX 3
+    pop temp 0
+    goto FuguGame_20
+label FuguGame_21
+label FuguGame_20
+    goto FuguGame_18
+label FuguGame_19
+label FuguGame_18
     goto FuguGame_8
 label FuguGame_9
     push constant 0
