--- a/src/Main.vm
+++ b/src/Main.vm
@@ -1,4 +1,6 @@
-function Main.main 2
+function Main.main 3
+    push constant 0
+    pop local 2
     call FuguGame.new 0
     pop local 1
     push local 1
