--- a/src/FuguGame.vm
+++ b/src/FuguGame.vm
@@ -1,5 +1,5 @@
 function FuguGame.new 0
-    push constant 5
+    push constant 8
     call Memory.alloc 1
     pop pointer 0
     push constant 0
@@ -8,12 +8,17 @@ function FuguGame.new 0
     pop this 0
     push constant 10
     pop this 3
+    push constant 16
+    pop this 7
     push this 3
-    call Array.new 1
+    call Carrots.new 1
     pop this 2
-    push pointer 0
-    call FuguGame.carrots_assemble 1
-    pop temp 0
+    push this 2
+    call Carrots.getXX 1
+    pop this 5
+    push this 2
+    call Carrots.getYY 1
+    pop this 6
     push constant 0
     pop this 1
     push pointer 0
@@ -24,114 +29,12 @@ function FuguGame.dispose 0
     push this 0
     call Fugu.dispose 1
     pop temp 0
+    push this 2
+    call Carrots.dispose 1
+    pop temp 0
     push pointer 0
     call Memory.deAlloc 1
     pop temp 0
-    push constant 0
-    return
-function FuguGame.carrots_assemble 0
-    push argument 0
-    pop pointer 0
-    push constant 0
-    push this 2
-    add
-    push constant 3
-    push constant 5
-    call Carrot.new 2
-    pop temp 0
-    pop pointer 1
-    push temp 0
-    pop that 0
-    push constant 1
-    push this 2
-    add
-    push constant 7
-    push constant 31
-    call Carrot.new 2
-    pop temp 0
-    pop pointer 1
-    push temp 0
-    pop that 0
-    push constant 2
-    push this 2
-    add
-    push constant 12
-    push constant 14
-    call Carrot.new 2
-    pop temp 0
-    pop pointer 1
-    push temp 0
-    pop that 0
-    push constant 3
-    push this 2
-    add
-    push constant 7
-    push constant 16
-    call Carrot.new 2
-    pop temp 0
-    pop pointer 1
-    push temp 0
-    pop that 0
-    push constant 4
-    push this 2
-    add
-    push constant 6
-    push constant 7
-    call Carrot.new 2
-    pop temp 0
-    pop pointer 1
-    push temp 0
-    pop that 0
-    push constant 5
-    push this 2
-    add
-    push constant 11
-    push constant 8
-    call Carrot.new 2
-    pop temp 0
-    pop pointer 1
-    push temp 0
-    pop that 0
-    push constant 6
-    push this 2
-    add
-    push constant 8
-    push constant 4
-    call Carrot.new 2
-    pop temp 0
-    pop pointer 1
-    push temp 0
-    pop that 0
-    push constant 7
-    push this 2
-    add
-    push constant 16
-    push constant 4
-    call Carrot.new 2
-    pop temp 0
-    pop pointer 1
-    push temp 0
-    pop that 0
-    push constant 8
-    push this 2
-    add
-    push constant 14
-    push constant 23
-    call Carrot.new 2
-    pop temp 0
-    pop pointer 1
-    push temp 0
-    pop that 0
-    push constant 9
-    push this 2
-    add
-    push constant 5
-    push constant 6
-    call Carrot.new 2
-    pop temp 0
-    pop pointer 1
-    push temp 0
-    pop that 0
     push constant 0
     return
 function FuguGame.calc_location 0
@@ -139,6 +42,8 @@ function FuguGame.calc_location 0
     pop pointer 0
     push argument 1
     push constant 32
+    call Math.multiply 2
+    push constant 16
     call Math.multiply 2
     push argument 2
     add
@@ -192,176 +97,7 @@ label FuguGame_7
 label FuguGame_6
     push constant 0
     return
-function FuguGame.IsCollided_LEGACY 6
-    push argument 0
-    pop pointer 0
-    push argument 1
-    call Carrot.getX 1
-    pop local 0
-    push argument 1
-    call Carrot.getY 1
-    pop local 1
-    push this 0
-    call Fugu.getX 1
-    pop local 3
-    push this 0
-    call Fugu.getY 1
-    pop local 4
-    push argument 1
-    call Carrot.getHeight 1
-    pop local 2
-    push this 0
-    call Fugu.getHeight 1
-    pop local 5
-    push local 0
-    push local 3
-    eq
-    push local 1
-    push constant 1
-    sub
-    push local 4
-    push local 5
-    add
-    push constant 1
-    sub
-    lt
-    push local 4
-    push local 5
-    add
-    push constant 1
-    sub
-    push local 1
-    push local 2
-    add
-    lt
-    push local 1
-    push local 2
-    add
-    push local 4
-    gt
-    push local 4
-    push local 1
-    push constant 1
-    sub
-    gt
-    and
-    or
-    and
-    and
-    return
-function FuguGame.IsCollided_LEGACY_Multiple 2
-    push argument 0
-    pop pointer 0
-    push constant 0
-    pop local 0
-    push constant 0
-    pop local 1
-label FuguGame_8
-    push local 0
-    push argument 1
-    lt
-    not
-    if-goto FuguGame_9
-    push pointer 0
-    push local 0
-    push this 2
-    add
-    pop pointer 1
-    push that 0
-    call FuguGame.IsCollided_LEGACY 2
-    pop local 1
-    goto FuguGame_8
-label FuguGame_9
-    push local 1
-    return
-function FuguGame.IsCollided 0
-    push argument 0
-    pop pointer 0
-    push argument 4
-    push argument 1
-    eq
-    push argument 5
-    push constant 1
-    sub
-    push argument 2
-    push argument 3
-    add
-    push constant 1
-    sub
-    lt
-    push argument 2
-    push argument 3
-    add
-    push constant 1
-    sub
-    push argument 5
-    push argument 6
-    add
-    lt
-    push argument 5
-    push argument 6
-    add
-    push argument 2
-    gt
-    push argument 2
-    push argument 5
-    push constant 1
-    sub
-    gt
-    and
-    or
-    and
-    and
-    return
-function FuguGame.moveCarrots 1
-    push argument 0
-    pop pointer 0
-    push constant 0
-    pop local 0
-label FuguGame_10
-    push local 0
-    push argument 1
-    lt
-    not
-    if-goto FuguGame_11
-    push pointer 0
-    push local 0
-    push this 2
-    add
-    pop pointer 1
-    push that 0
-    push argument 2
-    call FuguGame.moveCarrot 3
-    pop temp 0
-    push local 0
-    push constant 1
-    add
-    pop local 0
-    goto FuguGame_10
-label FuguGame_11
-    push constant 0
-    return
-function FuguGame.moveCarrot 0
-    push argument 0
-    pop pointer 0
-    push argument 1
-    call Carrot.erase 1
-    pop temp 0
-    push argument 1
-    push argument 1
-    call Carrot.getY 1
-    push argument 2
-    add
-    push argument 1
-    call Carrot.getX 1
-    call Carrot.set_YX 3
-    pop temp 0
-    push argument 1
-    call Carrot.draw 1
-    pop temp 0
-    push constant 0
-    return
-function FuguGame.run 13
+function FuguGame.run 16
     push argument 0
     pop pointer 0
     push constant 0
@@ -369,7 +105,7 @@ function FuguGame.run 13
     push constant 0
     pop local 5
     push constant 0
-    pop local 12
+    pop local 15
     push constant 14
     call String.new 1
     push constant 89
@@ -406,14 +142,21 @@ function FuguGame.run 13
     push constant 1
     neg
     pop local 8
-label FuguGame_12
+    push constant 0
+    pop local 12
+    push constant 0
+    pop local 13
+    push this 0
+    call Fugu.getHeight 1
+    pop local 14
+label FuguGame_8
     push local 3
     not
     not
-    if-goto FuguGame_13
+    if-goto FuguGame_9
     push constant 1
     pop local 2
-label FuguGame_14
+label FuguGame_10
     push local 2
     push constant 0
     eq
@@ -429,50 +172,60 @@ label FuguGame_14
     or
     not
     not
-    if-goto FuguGame_15
+    if-goto FuguGame_11
     call Keyboard.keyPressed 0
     pop local 2
     push local 2
     push constant 81
     eq
     not
-    if-goto FuguGame_17
+    if-goto FuguGame_13
     push constant 1
     neg
     pop local 3
-    goto FuguGame_16
-label FuguGame_17
-label FuguGame_16
+    goto FuguGame_12
+label FuguGame_13
+label FuguGame_12
     push local 2
     push constant 67
     eq
-    push local 12
+    push local 15
     push this 3
     lt
     and
     not
-    if-goto FuguGame_19
-    push local 12
+    if-goto FuguGame_15
+    push local 15
     push constant 1
     add
-    pop local 12
-    push local 12
+    pop local 15
+    push local 15
     push constant 1
     sub
-    push this 2
+    push this 6
     add
     pop pointer 1
     push that 0
-    pop local 11
-    push local 11
-    call Carrot.draw 1
+    push constant 32
+    call Math.multiply 2
+    push constant 16
+    call Math.multiply 2
+    push local 15
+    push constant 1
+    sub
+    push this 5
+    add
+    pop pointer 1
+    push that 0
+    add
+    call Carrot.draw_LEGACY 1
     pop temp 0
     push constant 100
     call Sys.wait 1
     pop temp 0
-    goto FuguGame_18
-label FuguGame_19
-label FuguGame_18
+    goto FuguGame_14
+label FuguGame_15
+label FuguGame_14
     push local 2
     push constant 130
     eq
@@ -489,7 +242,7 @@ label FuguGame_18
     eq
     or
     not
-    if-goto FuguGame_21
+    if-goto FuguGame_17
     push local 2
     push constant 129
     sub
@@ -497,29 +250,39 @@ label FuguGame_18
     push pointer 0
     call FuguGame.moveFugu 1
     pop temp 0
-    push pointer 0
-    push local 12
-    push local 7
-    call FuguGame.moveCarrots 3
-    pop temp 0
     push constant 30
     call Sys.wait 1
     pop temp 0
-    push pointer 0
-    push local 12
-    call FuguGame.IsCollided_LEGACY_Multiple 2
-    pop local 5
     push local 7
     neg
     pop local 7
-    goto FuguGame_20
-label FuguGame_21
-label FuguGame_20
-    goto FuguGame_14
-label FuguGame_15
+    goto FuguGame_16
+label FuguGame_17
+label FuguGame_16
+    push this 0
+    call Fugu.getX 1
+    pop local 12
+    push this 0
+    call Fugu.getY 1
+    pop local 13
+    push local 12
+    push local 13
+    push local 14
+    push this 5
+    push this 6
+    push this 7
+    push this 3
+    call Collision.IsCollided_Multiple_One 7
+    pop local 5
+    goto FuguGame_10
+label FuguGame_11
+label FuguGame_18
     push local 5
     not
-    if-goto FuguGame_23
+    if-goto FuguGame_19
+    push this 0
+    call Fugu.erase 1
+    pop temp 0
     push constant 4
     push constant 4
     call Output.moveCursor 2
@@ -536,11 +299,13 @@ label FuguGame_15
     push constant 53
     eq
     not
-    if-goto FuguGame_25
+    if-goto FuguGame_21
     push constant 0
     pop local 5
     call Screen.clearScreen 0
     pop temp 0
+    push constant 0
+    pop local 15
     push this 0
     push constant 0
     push constant 0
@@ -549,13 +314,12 @@ label FuguGame_15
     push this 0
     call Fugu.draw 1
     pop temp 0
-    goto FuguGame_24
-label FuguGame_25
-label FuguGame_24
-    goto FuguGame_22
-label FuguGame_23
-label FuguGame_22
-    goto FuguGame_12
-label FuguGame_13
+    goto FuguGame_20
+label FuguGame_21
+label FuguGame_20
+    goto FuguGame_18
+label FuguGame_19
+    goto FuguGame_8
+label FuguGame_9
     push constant 0
     return
